--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "material-ui": "^1.0.0-beta.25",
+    "material-ui-icons": "^1.0.0-beta.17",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -41,8 +43,10 @@
     "react-dom": "^16.0.0",
     "react-flag-icon-css": "^1.0.23",
     "react-router-bootstrap": "^0.24.4",
+    "react-tap-event-plugin": "^3.0.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "typeface-roboto": "0.0.45",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
