--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.0.0-beta.3",
+    "@devexpress/dx-react-grid": "^1.0.0-beta.3",
+    "@devexpress/dx-react-grid-material-ui": "^1.0.0-beta.3",
     "autoprefixer": "7.1.2",
     "axios": "^0.17.1",
     "babel-core": "6.25.0",
