--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
     "react-flag-icon-css": "^1.0.23",
+    "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "typeface-roboto": "0.0.45",
