--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "firebase": "^4.9.0",
     "flag-icon-css": "^2.8.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -46,7 +47,7 @@
     "react-dom": "^16.0.0",
     "react-flag-icon-css": "^1.0.23",
     "react-redux": "^5.0.6",
-    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "style-loader": "0.18.2",
